Fix default matchExpression in kubelet

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -184,8 +184,8 @@ kubeletConfigs:
   workers:
     machineConfigPoolSelector:
       matchExpressions:
-        key: pools.operator.machineconfiguration.openshift.io/worker
-        operator: Exists
+        - key: pools.operator.machineconfiguration.openshift.io/worker
+          operator: Exists
     kubeletConfig:
       maxPods: 100
 ----
