Improve documentation for parameter `defaultSpecs`

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -31,7 +31,7 @@ default:: Sensible defaults for a growing number of cloud providers.
 
 A dictionary holding the default values applied to each `machinesets.machine.openshift.io` object created by this component.
 
-The top level keys are the names of cloud providers as reported by the `cloud.provider` fact.
+The top level keys are the names of cloud providers as reported by the cluster fact `${facts:cloud}`.
 The values can be everything that's accepted in the `spec` field of a `machinesets.machine.openshift.io` object.
 
 == `infrastructureID`
