Use `monitoring.instance=null` to indicate that the default instance should be used

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -229,8 +229,8 @@ If the component is missing, no configurations will be deployed regardless of th
 
 [horizontal]
 type:: string
-default:: `''`
+default:: `null`
 
 This parameter can be used to indicate which custom Prometheus instance should pick up the configurations managed by the component.
 
-If the parameter is set to the empty string, the default instance configured for component `prometheus` will be used.
+If the parameter is set to `null`, the default instance configured for component `prometheus` will be used.
