Add support for annotations on MachineSets
This allows the configuration of custom annotations on MachineSets which
are used by operators like the [OpenShift MachineSet EgressCIDR operator](https://github.com/appuio/openshift-machineset-egress-cidr-operator).

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -84,6 +84,14 @@ It's centered around the MachineSet CRD but also takes care of some additional a
 The top level key is the name of each set of machines.
 Each set of machines has the values described below.
 
+=== `annotations`
+
+[horizontal]
+type:: dictionary
+default:: {}
+
+The annotations to add to the MachineSet.
+
 === `instanceType`
 
 [horizontal]
