Add explanation for Machine Config Pool Management

--- a/docs/modules/ROOT/partials/nav.adoc
+++ b/docs/modules/ROOT/partials/nav.adoc
@@ -1,2 +1,4 @@
 * xref:index.adoc[Home]
 * xref:references/parameters.adoc[Parameters]
+* Explanations
+** xref:explanations/machine-config-pool.adoc[Machine Config Pools]
