Support configuring cgroupMode

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -63,7 +63,6 @@ Configuring this higher up in the hierarchy can result in unexpected behavior.
 
 == `machine_api_namespace`
 
-
 [horizontal]
 type:: string
 default:: `openshift-machine-api`
@@ -71,6 +70,21 @@ default:: `openshift-machine-api`
 The namespace where machine-api related objects should be created.
 
 TIP: Namespaced resources without an explicit `.metadata.namespace` field will be deployed in this namespace as well.
+
+== `nodeConfig`
+
+[horizontal]
+type:: dictionary
+default::
++
+[source,yaml]
+----
+cgroupMode: v1
+----
+
+A dictionary holding the default values applied to the `node.config.openshift.io` object created by this component.
+
+You can switch between cgroup v1 and cgroup v2, as needed, by editing the node.config object. For more information, see https://docs.openshift.com/container-platform/latest/installing/install_config/enabling-cgroup-v2.html[Enabling Linux control group version 2].
 
 == `nodeGroups`
 
