Apply suggestions from code review
Co-authored-by: Simon Gerber <simon.gerber@vshn.ch>

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -39,7 +39,7 @@ A dictionary holding the default values applied to each `machinesets.machine.ope
 The top level keys are the names of cloud providers as reported by the cluster fact `${facts:cloud}`.
 The values can be everything that's accepted in the `spec` field of a `machinesets.machine.openshift.io` object.
 
-== `cpDefaultSpecs`
+== `controlPlaneDefaultSpecs`
 
 [horizontal]
 type:: dictionary
