--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -488,6 +488,64 @@ See the documentation for http://localhost:2020/cilium/references/parameters.htm
 
 The script expects the ConfigMap to have a key matching each node name on which egress dummy interfaces should be configured.
 
+
+== `machineSets`
+
+[horizontal]
+type:: dictionary
+default:: `{}`
+example::
++
+[source,yaml]
+----
+machineSets:
+  worker:
+    metadata:
+      labels:
+        machine.openshift.io/cluster-api-cluster: c-cluster-1
+    spec:
+      deletePolicy: Oldest
+      replicas: 3
+      selector:
+        matchLabels:
+          machine.openshift.io/cluster-api-cluster: c-cluster-1
+          machine.openshift.io/cluster-api-machineset: worker
+      template:
+        metadata:
+          labels:
+            machine.openshift.io/cluster-api-cluster: c-cluster-1
+            machine.openshift.io/cluster-api-machine-role: app
+            machine.openshift.io/cluster-api-machine-type: app
+            machine.openshift.io/cluster-api-machineset: worker
+        spec:
+          lifecycleHooks: {}
+          metadata:
+            labels:
+              node-role.kubernetes.io/app: ""
+              node-role.kubernetes.io/worker: ""
+          providerSpec:
+            value:
+              antiAffinityKey: worker
+              baseDomain: c-cluster-1.vshnmanaged.net
+              flavor: plus-16-4
+              image: custom:rhcos-4.16
+              interfaces:
+                - addresses:
+                    - subnetUUID: 1971d4c3-0065-41fc-82f4-c26cf2fe4f9a
+                  type: Private
+              rootVolumeSizeGB: 100
+              tokenSecret:
+                name: cloudscale-rw-token
+              userDataSecret:
+                name: cloudscale-user-data
+              zone: lpg1
+----
+
+A dictionary of machine sets to create on the cluster.
+The resulting `MachineSet` object will have the key as the name and the value is merged into the resource.
+
+The MachineSet will will have the namespace from `machine_api_namespace` applied.
+
 === Example
 
 [source,yaml]
