Ignore `spec.replicas` for autoscaled MachineSets during ArgoCD sync
We need to ignore changes to `spec.replica` when diffing *and* syncing
MachineSets which are managed by a `MachineAutoscaler`.

To do so we 1) dynamically configure `spec.ignoreDifferences` in the
ArgoCD app to ignore `spec.replicas` of each `MachineSet` that's
targeted by a `MachineAutoscaler` and 2) set ArgoCD sync option
`RespectIgnoreDifferences=true` to ensure that we don't overwrite the
machine autoscaler's value in `spec.replicas` if we're applying other
changes.

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -318,6 +318,8 @@ Each key value pair in this parameter is used to create a `MachineAutoscaler` re
 The component expects that each key matches a `MachineSet` which is configured through one of the parameters `nodeGroups` or `machineSets`.
 The component will raise an error if it finds a key which doesn't have a matching entry in `nodeGroups` or `machineSets`.
 
+NOTE: The component will configure ArgoCD to ignore changes to `spec.replicas` for each `MachineSet` resources targeted by a `MachineAutoscaler`.
+
 The value associated with each key is used as the base configuration for `.spec` of the resulting `MachineAutoscaler` resource.
 The component will always configure `.spec.scaleTargetRef.name` with the key to ensure the `MachineAutoscaler` resource targets the desired `MachineSet`.
 
