--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -339,7 +339,7 @@ When the parameter has any fields set, the component will default parameter `.sp
 
 The component will render the provided dictionary as YAML and write it to `data.priorities` in the `cluster-autoscaler-priority-expander` configmap.
 
-=== `autoscaling.metrics.enabled`
+=== `autoscaling.customMetrics.enabled`
 [horizontal]
 type:: boolean
 default:: `false`
@@ -348,7 +348,7 @@ When enabled, create PrometheusRules to generate metrics for certain autoscaling
 `component_openshift4_nodes_machineset_replicas_max` contains the `maxReplicas` value for each machine set.
 `component_openshift4_nodes_machineset_replicas_min` contains the `minReplicas` value for each machine set.
 
-=== `autoscaling.metrics.extraLabels`
+=== `autoscaling.customMetrics.extraLabels`
 [horizontal]
 type:: dictionary
 default:: `{}`
