Patch autoscaler args
Adds some sane defaults:
- `--daemonset-eviction-for-occupied-nodes`: Stops things like CSI drivers to be evicted.
- `--skip-nodes-with-local-storage`: Allows node deletion even if pods use `emptyDir`.

Co-authored-by: Simon Gerber <simon.gerber@vshn.ch>

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -268,6 +268,26 @@ default:: `false`
 
 Whether to configure autoscaling for the cluster.
 
+=== `autoscaling.addAutoscalerArgs`
+
+[horizontal]
+type:: list
+default::
++
+[source,yaml]
+----
+addAutoscalerArgs:
+  - --daemonset-eviction-for-occupied-nodes=false
+  - --skip-nodes-with-local-storage=false
+----
+
+Patches the `default` cluster autoscaler pod with the provided arguments.
+
+Those arguments can't be set in the `ClusterAutoscaler` resource itself.
+
+* `--daemonset-eviction-for-occupied-nodes=false`: Disables eviction of DaemonSet pods to prevent CSI drivers and other required infrastructure pods from being evicted.
+* `--skip-nodes-with-local-storage=false`: Allows removing nodes with pods that use `emptyDir` volumes.
+
 === `autoscaling.ignoreDownscalingSync`
 
 [horizontal]
