Make default cloudscale anti-affinity keys unique per cluster

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -271,7 +271,7 @@ machineSets:
               node-role.kubernetes.io/worker: ""
           providerSpec:
             value:
-              antiAffinityKey: worker
+              antiAffinityKey: c-cluster-1_worker
               baseDomain: c-cluster-1.vshnmanaged.net
               flavor: plus-16-4
               image: custom:rhcos-4.16
