Add documentation on interactions with pod priority and autoscaling

--- a/docs/modules/ROOT/partials/nav.adoc
+++ b/docs/modules/ROOT/partials/nav.adoc
@@ -3,3 +3,4 @@
 * Explanations
 ** xref:explanations/machine-config-pool.adoc[Machine Config Pools]
 ** xref:explanations/resource_management.adoc[Resource Management]
+** xref:explanations/priority_and_autoscaling.adoc[Pod Priority and Autoscaling]
